k8s/homelab-01/specs/traefik_dashboard_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  labels:
    app: traefik
spec:
  ports:
  - name: http
    targetPort: 9000
    port: 80
  - name: metrics
    targetPort: 9100
    port: 9100
  selector:
    app.kubernetes.io/name: traefik
