k8s/homelab-01/specs/rancher_monitoring_ingress_routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${grafana_hostname}`)
      kind: Rule
      services:
      - name: rancher-monitoring-grafana
        passHostHeader: true
        port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${alertmanager_hostname}`)
      kind: Rule
      services:
      - name: rancher-monitoring-alertmanager
        passHostHeader: true
        port: 9093
