k8s/homelab-01/specs/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
      nodeSelector: 
        kubernetes.io/os: "linux"
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${whoami_hostname}`) || Host(`${whoami_internal_hostname}`)
      kind: Rule
      services:
      - name: whoami-service
        passHostHeader: true
        port: 80
